# telco-demo

./: README.md  start_telco.sh
infra/core/: Cargo.toml  telco-core-v1.0.yaml  telco-core-v1.1-daemonscaler.yaml  telco-scale.yml  wasmcloud.toml
infra/core/src/: lib.rs
infra/edge/: Cargo.toml  README.md  telco-edge-v1.0.yaml  telco-edge-v1.1-daemonscaler.yaml  wasmcloud.toml
infra/edge/src/: lib.rs
infra/tower/: Cargo.toml  README.md  telco-tower-v1.0.yaml  telco-tower-v1.1-daemonscaler.yaml  telco-tower-v1.2-daemonscaler-eu.yaml  telco-tower-v1.3-daemonscaler-eu-up.yaml  wasmcloud.toml
infra/tower-de/: Cargo.toml  README.md  wasmcloud.toml
infra/tower-de/src/: lib.rs
infra/tower-fr/: Cargo.toml  README.md  wasmcloud.toml
infra/tower-fr/src/: lib.rs
infra/tower/src/: lib.rs
infra/user/: Cargo.toml  README.md  telco-user-v1.0.yaml  telco-user-v1.1-daemonscaler.yaml  wasmcloud.toml
infra/user/src/: lib.rs
