[package]
name = "tower-fr"
version = "0.1.1"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "tower_fr"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.14"
wasmcloud-interface-httpserver = "0.11"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
